--- a/webserver/index.html
+++ b/webserver/index.html
@@ -63,8 +63,8 @@
             <div class="sensor"><span class="label">Air Temp (Outdoor):</span> ${data.air_temp_outdoor ?? 'N/A'} °C</div>
             <div class="sensor"><span class="label">Humidity (Indoor):</span> ${data.humidity_indoor ?? 'N/A'} %</div>
             <div class="sensor"><span class="label">Humidity (Outdoor):</span> ${data.humidity_outdoor ?? 'N/A'} %</div>
-            <div class="sensor"><span class="label">Water Temp Top:</span> ${data["Water Temp Top"] || 'N/A'} °C</div>
-            <div class="sensor"><span class="label">Water Temp Bottom:</span> ${data["Water Temp Bottom"] || 'N/A'} °C</div>
+            <div class="sensor"><span class="label">Water Temp Top:</span> ${data.water_temp_top ?? 'N/A'} °C</div>
+            <div class="sensor"><span class="label">Water Temp Bottom:</span> ${data.water_temp_bottom ?? 'N/A'} °C</div>
             <div class="sensor"><span class="label">Top Float:</span> ${data.top_float_low == 1 ? 'Low' : 'Okay'}</div>
             <div class="sensor"><span class="label">Bottom Float:</span> ${data.bottom_float_low == 1 ? 'Low' : 'Okay'}</div>
             <div class="sensor"><span class="label">Relay Fan Circ:</span> ${data.relay_fan_circ == 1 ? 'ON' : 'OFF'}</div>
